tests/ui/codegen/mir/validation/parse_function_without_blocks.mir
//@compile-flags: --pass none

@module FunctionWithoutBlocks

fn @bad() {} //~ ERROR: function must contain at least one block
